<resources>
    <string name="app_name">Lifting Tracker</string>

    <!-- Strings related to login -->
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="username">username</string>
    <string name="log_out">Log Out</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="finish">Finish</string>
    <string name="add_exercise">add Exercise</string>
    <string name="testload">TestLoad</string>
</resources>
