<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.squale.liftingtracker.AppOverlay">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textSize="50sp"
                android:textColor="@color/colorPrimary"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/black"/>
                <Button
                        android:id="@+id/bSettings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings"
                        android:background="@null"
                        android:textSize="24sp"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/black"/>
                <Button
                        android:id="@+id/bLogOut"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/log_out"
                        android:background="@null"
                        android:textAlignment="center"
                        android:textSize="24sp"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>